--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <div id="root"></div>
     <!--
       This HTML file is a template.
